# post-double-selection-lasso

./: .gitignore  LICENSE  PYPI_RELEASE_GUIDE.md  README.md  example.ipynb  pdslasso.py  pyproject.toml  sim_data.py  smoke_test.py  test_compare_stata.py  test_pdslasso_feasible.py
notes/: feasible_lasso_algo.md  pds_lasso.md  todo.md
pdslasso/: __init__.py  core.py  sim_data.py
stata/: pdslasso_compare.do  pdslasso_results.csv
tests/: smoke_test.py  test_compare_stata.py  test_feasible.py  test_partial_out.py  test_validation.py
